--- a/css/style.css
+++ b/css/style.css
@@ -19,4 +19,110 @@ body {
 .navigation > h1 {
   display: flex;
   justify-content: center;
+  margin: 30px;
+}
+
+.container > header {
+  text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.container > header > h1 {
+  font-size: 40px;
+  margin-bottom: 50px;
+}
+
+.container > header > h3 {
+  font-weight: 100;
+}
+
+.container-content {
+  display: flex;
+}
+
+.container-content-item1 {
+  width: 100%;
+  height: 200px;
+  border: 1px solid;
+  margin: 15px;
+  background-color: rgb(202, 210, 215);
+  border: 0;
+}
+
+.container-content-item {
+  width: 30%;
+  height: fit-content;
+  border: 1px solid;
+  margin: 15px;
+  background-color: rgb(202, 210, 215);
+  border: 0;
+}
+
+.container-content-item > header {
+  margin: 30px;
+}
+
+.container-content-item > header {
+  margin-bottom: 30px;
+}
+
+.container-content-item > header > h6 {
+  color: rgb(100, 97, 97);
+  font-weight: 100;
+}
+
+.content-fill {
+  text-align: left;
+  margin: 30px;
+  margin-right: 50px;
+}
+
+.content-fill > input {
+  width: 100%;
+  height: 40px;
+  border-radius: 5px;
+  border: 3px solid rgb(213, 211, 211);
+  padding-left: 10px;
+}
+
+.dropbtn {
+  background-color: #ffffff;
+  height: 40px;
+  width: 100%;
+  border: 1px solid rgb(213, 211, 211);
+  width: 100%;
+  text-align: left;
+  padding-left: 10px;
+}
+
+.dropdown {
+  width: 100%;
+  height: 40px;
+  border-radius: 5px;
+  border: 3px solid rgb(213, 211, 211);
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {
+  background-color: #ddd;
+}
+
+.show {
+  display: block;
 }
