--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,20 @@
 body {
   font-family: Verdana;
+  scroll-margin: auto;
+  background-color: rgb(254, 252, 252);
+}
+
+body > .main {
+  margin-left: 180px;
+  margin-right: 180px;
+  margin-top: 30px;
+  background-color: whitesmoke;
+}
+
+.main-container {
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 20px;
 }
 
 .navigation {
@@ -50,10 +65,10 @@ body {
 }
 
 .container-content-item {
-  width: 30%;
+  width: fit-content;
   height: fit-content;
   border: 1px solid;
-  margin: 15px;
+  margin: 10px;
   background-color: rgb(202, 210, 215);
   border: 0;
 }
@@ -83,46 +98,15 @@ body {
   border-radius: 5px;
   border: 3px solid rgb(213, 211, 211);
   padding-left: 10px;
+  table-layout: fixed;
 }
 
-.dropbtn {
+.container-content-item > .content-fill > select {
+  width: 105%;
   background-color: #ffffff;
-  height: 40px;
-  width: 100%;
-  border: 1px solid rgb(213, 211, 211);
-  width: 100%;
-  text-align: left;
-  padding-left: 10px;
-}
-
-.dropdown {
-  width: 100%;
+  color: #787373;
   height: 40px;
   border-radius: 5px;
   border: 3px solid rgb(213, 211, 211);
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  overflow: auto;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown a:hover {
-  background-color: #ddd;
-}
-
-.show {
-  display: block;
+  padding-left: 10px;
 }
